--- a/GlookoApp/app/src/main/res/layout/content_main.xml
+++ b/GlookoApp/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
+        android:paddingTop="@dimen/my_view_margin"
         />
 
 </RelativeLayout>
