--- a/GlookoApp/app/src/main/res/values/colors.xml
+++ b/GlookoApp/app/src/main/res/values/colors.xml
@@ -4,9 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGray">#D3D3D3</color>
-    <color name="meal">#24C8BC</color>
+    <color name="meal">#CFA7F5</color>
     <color name="timestamp">#FCB16B</color>
     <color name="bg_value">#CFA7F5</color>
     <color name="toolbar">#0091EE</color>
     <color name="black">#000</color>
+    <color name="test">#FC607D</color>
 </resources>
